[package]
name = "keyvalue"
version = "0.1.0"
edition = "2024"

[dependencies]
# no-std
core2 = { version = "0.4", default-features = false }

# async
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", default-features = false, features = [
    "alloc",
], optional = true }
tokio = { version = "1", default-features = false, features = [
    "sync",
], optional = true }

# database
aws-sdk-s3 = { version = "1", default-features = false, optional = true }
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
], optional = true }
aws-credential-types = { version = "1", default-features = false, features = [
    "hardcoded-credentials",
], optional = true }
aws-smithy-async = { version = "1", default-features = false, optional = true }
aws-smithy-runtime-api = { version = "1", default-features = false, optional = true }
reqwest = { version = "0.13", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb = { version = "3", optional = true }
fjall = { version = "3", optional = true }
rust-rocksdb = { version = "0.45", optional = true }
turso = { version = "0.4", default-features = false, optional = true }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "time",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = { version = "0.3", optional = true }
indexed-db = { version = "0.5.0-alpha", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-time = { version = "1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasmt = { git = "https://github.com/Fedeparma74/wasmt", optional = true }

[features]
default = ["std", "async"]

std = []

async = ["async-trait", "dep:futures"]
transactional = []
versioned = []

in-memory = ["std"]
redb = ["std", "dep:redb"]
fjall = ["std", "dep:fjall"]
sqlite = ["std", "async", "dep:turso"]
rocksdb = ["std", "dep:rust-rocksdb"]
aws-s3 = [
    "std",
    "async",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-smithy-async",
    "dep:aws-smithy-runtime-api",
    "dep:getrandom",
    "dep:gloo-timers",
    "dep:web-time",
    "dep:tokio",
    "dep:reqwest",
    "dep:wasm-bindgen-futures",
]
local-storage = ["std", "dep:gloo-storage"]
indexed-db = [
    "std",
    "async",
    "dep:indexed-db",
    "dep:js-sys",
    "dep:wasmt",
    "dep:tokio",
]

test = [
    "std",
    "async",
    "transactional",
    "versioned",
    "in-memory",
    "redb",
    "fjall",
    "rocksdb",
    "sqlite",
    "aws-s3",
]
test-wasm = [
    "std",
    "async",
    "transactional",
    "versioned",
    "in-memory",
    "local-storage",
    "indexed-db",
    "aws-s3",
]

[dev-dependencies]
const_format = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasmt = { git = "https://github.com/Fedeparma74/wasmt" }

[profile.dev]
opt-level = 1
incremental = true
